# pygrampc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build.yaml  pip.yaml
examples/Crane2D/: CMakeLists.txt  Crane2D.cpp  Crane2D.hpp  Crane2D.json  Crane2D.py  Crane2D_C.py  build_problem.py
examples/DoubleIntegrator/: DoubleIntegrator.py
src/: binding.cpp  grampc_binding.cpp  grampc_binding.hpp  grampc_interface.cpp  grampc_interface.hpp  problem_base.cpp  problem_base.hpp  problem_description.cpp  problem_description.hpp
src/pygrampc/: __init__.py  _core.pyi  grampc.py
templates/: CMakeLists.txt  MyProblem.cpp  MyProblem.hpp  MyProblem.py  options_template.json
tests/: test_pygrampc.py
